# dbt-graphql

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  FOLLOWUPS.md  LICENSE  README.md  ROADMAP.md  access.example.yml  config.example.yml  llms-full.txt  llms.txt  pyproject.toml
docs/: access-policy.md  api.md  architecture.md  caching.md  code-standards.md  codebase-summary.md  comparison.md  compiler.md  configuration.md  deployment-guide.md  design-guidelines.md  graphql.md  implementation_plan.md  mcp.md  pagination.md  policy-aware-introspection-plan.md  project-overview-pdr.md  project-roadmap.md  schema-synthesis.md  security.md  system-architecture.md
docs/plans/: sec-j-caching.md
src/dbt_graphql/: __init__.py  cli.py  config.py  defaults.py  monitoring.py  pipeline.py  sql_ops.py  telemetry.py
src/dbt_mdl/: __init__.py  cli.py  pipeline.py
src/wren_dbt_converter/: __init__.py  cli.py  converter.py  engine_builder.py
tests/: conftest.py  test_cli.py  test_columns.py  test_converter.py  test_data_source.py  test_lineage.py  test_profiles_parser.py  test_relationships.py  test_tests_preprocessor.py
tests/fixtures/: docker-compose.yml
tests/integration/: conftest.py  test_cache_layers.py  test_cache_redis.py  test_cli.py  test_converter.py  test_integration.py  test_mcp_enrichment.py  test_mcp_http.py  test_pool_admission.py  test_result_cache.py  test_serve.py
tests/unit/: conftest.py  test_compiler.py  test_config.py  test_connection.py  test_formatter.py  test_lineage.py  test_monitoring.py  test_pipeline.py  test_relationships.py  test_schema.py  test_tests_preprocessor.py
(+132 files in other folders)
