[project]
name = "dbt-graphql"
version = "0.1.0"
description = "Convert dbt artifacts to GraphQL schema and serve a SQL-backed GraphQL API"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
dependencies = [
    "dbt-artifacts-parser>=0.13.0",
    "dbt-colibri>=0.3.0,<0.4",
    "graphql-core>=3.2.8",
    "sqlalchemy[asyncio]>=2.0.49",
    "pyyaml>=6.0.2",
    "pydantic-settings>=2.14.0",
    "simpleeval>=1.0.7",
    "ariadne>=1.0.1",
    "fastmcp>=3.2.4",
    "uvicorn[standard]>=0.46.0",
    "httpx>=0.28.1",
    "joserfc>=1.6.4",
    "cashews>=7.5.0",
    "loguru>=0.7.3",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.61",
    "opentelemetry-instrumentation-starlette>=0.61",
    "opentelemetry-instrumentation-httpx>=0.61",
]

[project.optional-dependencies]
redis = ["redis>=7.4"]
postgres = ["asyncpg>=0.31"]
mysql = ["aiomysql>=0.3.2"]

[project.scripts]
dbt-graphql = "dbt_graphql.cli:main"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-docker",
    "pyjwt",
]
lint = ["ruff", "ty"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12"]
build-backend = "uv_build"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["tests/*", "**/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
